[gd_scene load_steps=25 format=2]

[ext_resource path="res://skeleton.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/Skeleton/death/death01.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/Skeleton/death/death02.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/Skeleton/death/death03.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemies/Skeleton/death/death04.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemies/Skeleton/death/death05.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/Skeleton/death/death06.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemies/Skeleton/shoot/shoot01.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemies/Skeleton/shoot/shoot02.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Enemies/Skeleton/shoot/shoot03.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Enemies/Skeleton/shoot/shoot04.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Enemies/Skeleton/walk/walk01.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Enemies/Skeleton/walk/walk02.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Enemies/Skeleton/walk/walk03.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Enemies/Skeleton/walk/walk04.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Enemies/Skeleton/walk/walk05.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Enemies/Skeleton/walk/walk06.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Enemies/Skeleton/walk/walk07.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Enemies/Skeleton/walk/walk08.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Enemies/Skeleton/walk/walk09.png" type="Texture" id=20]
[ext_resource path="res://skeleton_area.gd" type="Script" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": false,
"name": "shoot",
"speed": 12.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 7 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 9.0

[node name="skeleton_body" type="KinematicBody2D"]
position = Vector2( 8.98589, 78.6303 )
scale = Vector2( 2, 2 )
collision/safe_margin = 0.01
script = ExtResource( 1 )

[node name="skeleton_sprite" type="AnimatedSprite" parent="."]
position = Vector2( -23.3509, -32 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )
animation = "walk"
frame = 5
playing = true
centered = false

[node name="skeleton_shape" type="CollisionShape2D" parent="."]
position = Vector2( 1, -3 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="skeleton_RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 10.3757, 1.58929 )
enabled = true
cast_to = Vector2( 0, 13 )

[node name="skeleton_area" type="Area2D" parent="."]
position = Vector2( 0.823601, -3.18163 )
script = ExtResource( 21 )

[node name="skeleton_area_shape" type="CollisionShape2D" parent="skeleton_area"]
position = Vector2( 0.0636215, 0.106033 )
shape = SubResource( 3 )

[node name="skeleton_death_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="skeleton_spike_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="skeleton_position" type="Position2D" parent="."]
position = Vector2( 11.5608, -7.13134 )
[connection signal="body_entered" from="skeleton_area" to="skeleton_area" method="_on_magma_monster_area_body_entered"]
[connection signal="body_entered" from="skeleton_area" to="skeleton_area" method="_on_skeleton_area_body_entered"]
[connection signal="timeout" from="skeleton_death_timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="skeleton_death_timer" to="." method="_on_skeleton_death_timer_timeout"]
[connection signal="timeout" from="skeleton_spike_timer" to="." method="_on_skeleton_spike_timer_timeout"]
